<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".Menu">

    <TextView
        android:id="@+id/textViewLogout"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="13dp"
        android:text="logout"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/btNavMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/title_bg"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/menu"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:minHeight="48dp"
        android:onClick="logout"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/ic_baseline_login_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textViewCurrentUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="Current User"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btNavMenu"
        app:layout_constraintEnd_toStartOf="@+id/imageButton" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="414dp"
        android:layout_height="592dp"
        android:layout_marginTop="11dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2">

        <ImageView
            android:id="@+id/imageViewZestyItalian"
            android:layout_width="166dp"
            android:layout_height="140dp"
            android:layout_marginTop="66dp"
            android:layout_marginEnd="28dp"
            android:clickable="true"
            android:onClick="onClickPizzas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewHawaiian"
            app:srcCompat="@drawable/zestyitalianpizza"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageViewTheWorks"
            android:layout_width="166dp"
            android:layout_height="140dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="66dp"
            android:clickable="true"
            android:onClick="onClickPizzas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewGardenPizza"
            app:srcCompat="@drawable/theworks"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageViewHawaiian"
            android:layout_width="166dp"
            android:layout_height="140dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="28dp"
            android:clickable="true"
            android:onClick="onClickPizzas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hawaiianbbqpizza"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imageViewGardenPizza"
            android:layout_width="166dp"
            android:layout_height="140dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="26dp"
            android:clickable="true"
            android:onClick="onClickPizzas"
            app:layout_constraintEnd_toStartOf="@+id/imageViewHawaiian"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gardenpizza"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewGarden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/Garden"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewHawaiian"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewHawaiian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="93dp"
            android:text="@string/hawaiian"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewHawaiian" />

        <TextView
            android:id="@+id/textViewTheWorks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/TheWorks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewTheWorks" />

        <TextView
            android:id="@+id/textViewZesty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="118dp"
            android:text="@string/Zesty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewZestyItalian" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>